--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-pip install plotly
-pip install dash
-pip install dash-renderer
-pip install dash-html-components
-pip install dash-core-components
-pip install pandas
-pip install dash_bootstrap_components
-pip install click
-pip install Cython
-pip install hardet
-pip install decorator
-pip install nbformat
-pip install numpy
-pip install pandas-datareader
-pip install python-dateutil
-pip install pytz
-pip install requests
-pip install urllib3
-pip install Werkzeug
-pip install layouts
-pip install app 
-pip install callback
+plotly
+dash
+dash-renderer
+dash-html-components
+dash-core-components
+pandas
+dash_bootstrap_components
+click
+Cython
+hardet
+decorator
+nbformat
+numpy
+pandas-datareader
+python-dateutil
+pytz
+requests
+urllib3
+Werkzeug
+layouts
+app 
+callback
