--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,19 @@
-app==0.0.1
-attrs==20.3.0
-Brotli==1.0.9
-callback==0.0.1
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-Cython==0.29.22
-dash==1.19.0
-dash-bootstrap-components==0.11.3
-dash-core-components==1.15.0
-dash-html-components==1.1.2
-dash-renderer==1.9.0
-dash-table==4.11.2
-decorator==4.4.2
-Deprecated==1.2.11
-Flask==1.1.2
-Flask-Compress==1.9.0
-future==0.18.2
-gitdb==4.0.5
-GitPython==3.1.13
+plotly
+dash
+dash-renderer
+dash-html-components
+dash-core-components
+pandas
+dash_bootstrap_components
+click
+Cython
+decorator
+nbformat
+numpy
+pandas-datareader
+python-dateutil
+pytz
+requests
+urllib3
+Werkzeug
 gunicorn==20.0.4
-idna==2.10
-ipython-genutils==0.2.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
-jsonschema==3.2.0
-jupyter-core==4.7.1
-layouts==0.4.10
-lxml==4.6.2
-MarkupSafe==1.1.1
-mysql-connector-python==8.0.23
-nbformat==5.1.2
-numpy==1.20.1
-pandas==1.2.2
-pandas-datareader==0.9.0
-plotly==4.14.3
-protobuf==3.15.3
-PyGithub==1.54.1
-PyJWT==1.7.1
-PyMySQL==1.0.2
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-pywin32==300
-requests==2.25.1
-retrying==1.3.3
-six==1.15.0
-smmap==3.0.5
-SQLAlchemy==1.3.23
-traitlets==5.0.5
-urllib3==1.26.3
-Werkzeug==1.0.1
-wrapt==1.12.1
