--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ dash==1.19.0
 dash-renderer==1.9.0
 dash-html-components==1.1.2
 dash-core-components==1.15.0
-pandas==1.2.2
+pandas
 dash-bootstrap-components==0.11.3
 click==7.1.2
 Cython==0.29.22
