--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Cython==0.29.22
 chardet==4.0.0
 decorator==4.4.2
 nbformat==5.1.2
-numpy==1.20.1
+numpy
 pandas-datareader==0.9.0
 requests==2.25.1
 urllib3==1.26.3
